# NAnalysis

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: Interpolation_use.cpp  eatnum.c  ieee754.c  main.cpp
src/mlib/: CMakeLists.txt  fft.cpp  fft.h  fit.cpp  fit.h  integral.cpp  integral.h  interpolation.cpp  interpolation.h  mlib.cpp  mlib.h
tests/: test_add.cpp
